IMP: testing event import for scientists